-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.1
-
None
-
Windows 10, mingw Qt 6.5.1, ffmpeg backend
-
-
9bd10b941 (dev), 62f64d275 (6.5), 506a6f855 (6.6)
When stop():in a Camera the active property stays true. The Camera does stop and start():ing works but it impossible to know if camera is active or not.
Below debug log from a slightly modified declarative-camera (add onActiveChanged: console.debug("Active: "+active), added buttons top stop/start camera )
qml: Active: true
qt.multimedia.imageCapture: cameraActiveChanged false true
qt.multimedia.imageCapture: isReady false
qt.multimedia.video: updatePaintNode: Video node created. Handle type: NoHandle
qml: Active: true
qt.multimedia.imageCapture: cameraActiveChanged true false
qt.multimedia.imageCapture: isReady true
qml: Active: true
qt.multimedia.imageCapture: cameraActiveChanged false true
qt.multimedia.imageCapture: isReady false
qml: Active: true
qt.multimedia.imageCapture: cameraActiveChanged true false
qt.multimedia.imageCapture: isReady true
For Gerrit Dashboard: QTBUG-114174 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
494054,2 | Set camera active property to false after stop | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
494150,2 | Set camera active property to false after stop | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
494151,2 | Set camera active property to false after stop | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |