Set camera active property to false after stop

Current implementation reset active camera pointer after activeChanged
is emitted, but that's incorrect because during this process it's used
in QWindowsCamera::isActive to return current active state. The fix is
to reset the active camera before the signal is emitted.

Task-number: QTBUG-114174
Change-Id: Icc4b8da794d8a7a91bda5a9126ba226158e9ad8f
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 9bd10b941b035cacab2ef3ff7f7530517c5418fc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>